--- a/miutimetable/templates/timetable.html
+++ b/miutimetable/templates/timetable.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="top-bar" style="background-color: #025830; padding: 20PX; margin-bottom: 20PX;">
-        <span class="brand-text font-weight-light" style="color: aliceblue;">MIU Timetabling Management System</span>
+        <span class="brand-text font-weight-light" style="color: aliceblue;">Timetabling Management System</span>
 
     </div>
     <div class="container">
